no decoration en boton de servicios

--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -72,6 +72,7 @@ body{
     }
 
     .primary-button {
+        text-decoration: none;
         color: #fff;
         background-color: #1AAE9F;
         border-radius: 5px;
