--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -3,6 +3,19 @@ h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 30px;
     font-weight: 700;
+    animation-duration: 2s;
+animation-name: aparecer;
+animation-iteration-count: infinite;
+}
+
+@keyframes aparecer {
+    0% {
+    opacity: 0;
+    }
+
+    100% {
+    opacity: 1;
+    }
 }
 
 
