--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -9,6 +9,24 @@ main {
         padding: 150px;
     }
 
+    /*animacion*/
+
+    .backhome {
+        animation-duration: 2s;
+        animation-name: aparecer;
+        animation-iteration-count: infinite;
+
+        @keyframes aparecer {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+    }
+
     .backnous {
         background-color: #1AAE9F;
         color: #fff;
@@ -16,7 +34,7 @@ main {
         height: 430px;
         align-content: center;
         padding: 150px;
-    
+
     }
 
     .backserv {
@@ -26,6 +44,6 @@ main {
         height: 430px;
         align-content: center;
         padding: 150px;
-    
+
     }
 }
