--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -15,7 +15,7 @@ main {
         animation-duration: 2s;
         animation-name: aparecer;
         animation-iteration-count: infinite;
-
+    }
         @keyframes aparecer {
             0% {
                 opacity: 0;
