--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,5 @@
 header {
-    background: rgb(184,2,174);
-    background: radial-gradient(circle, rgba(184,2,174,1) 0%, rgba(0,0,0,1) 95%);
+    background-color: #222;
     color: #fff;
     padding: 15px;
     position: sticky;
