--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,7 +1,8 @@
 main {
 
     .backhome {
-        background-color: #000d3f;
+        background: rgb(184,2,174);
+        background: radial-gradient(circle, rgba(184,2,174,1) 0%, rgba(0,0,0,1) 95%);        
         color: #fff;
         text-align: center;
         height: 430px;
