--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -223,7 +223,7 @@ header {
 }
 
 main .backhome {
-  background-color: #000d3f;
+  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
   color: #fff;
   text-align: center;
   height: 430px;
