--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -223,7 +223,8 @@ header {
 }
 
 main .backhome {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  background: rgb(184,2,174);
+  background: radial-gradient(circle, rgba(184,2,174,1) 0%, rgba(0,0,0,1) 95%);
   color: #fff;
   text-align: center;
   height: 430px;
