BACK HOME, SERV, NOS

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,7 +1,8 @@
 main {
 
     .backhome {
-        background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);      
+        background: rgb(184, 2, 174);
+        background: radial-gradient(circle, rgba(184, 2, 174, 1) 0%, rgba(0, 0, 0, 1) 95%);
         color: #fff;
         text-align: center;
         height: 430px;
@@ -11,13 +12,12 @@ main {
 
     /*animacion*/
 
-    .animation1 {
-        
-    }
+    .animation1 {}
 
 
     .backnous {
-        background-color: #1AAE9F;
+        background: rgb(184, 2, 174);
+        background: radial-gradient(circle, rgba(184, 2, 174, 1) 0%, rgba(0, 0, 0, 1) 95%);
         color: #fff;
         text-align: center;
         height: 430px;
@@ -27,7 +27,8 @@ main {
     }
 
     .backserv {
-        background-color: #1AAE9F;
+        background: rgb(184, 2, 174);
+        background: radial-gradient(circle, rgba(184, 2, 174, 1) 0%, rgba(0, 0, 0, 1) 95%);
         color: #fff;
         text-align: center;
         height: 430px;
