--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 footer {
 
     footer {
-        background-color: #222;
+        background-color: #111111!important;
         color: #fff;
         padding: 20px;
         color: #FFF;
