--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -7,6 +7,11 @@ footer {
         color: #FFF;
     
     }
+
+    section.footer-section {
+        background-color: #111;
+        color: #fff;
+    }
     
     footer {
         background-color: #000;
