Footer seccion class

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -7,11 +7,6 @@ footer {
         color: #FFF;
     
     }
-
-    section.footer-section {
-        background-color: #111;
-        color: #fff;
-    }
     
     footer {
         background-color: #000;
@@ -35,6 +30,11 @@ footer {
     
     .fb-icon {
         padding: 5px;
+    }
+
+    .footer-section {
+        background-color: #111;
+        color: #fff;
     }
 
 }
