--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -32,7 +32,7 @@ footer {
         padding: 5px;
     }
 
-    footer .footer-section {
+    section.footer-section {
         background-color: #222;
         display: flex;
         justify-content: space-between;
