fix footer class

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -32,7 +32,7 @@ footer {
         padding: 5px;
     }
 
-    section.footer-section {
+    .footer.section.footer-seccion {
         background-color: #222;
         display: flex;
         justify-content: space-between;
