--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -1,13 +1,13 @@
 /* HEADER*/
 
-@media (max-width:576px) {
+@media (max-width:576) {
     header img {
         width: 80%;
     }
 }
 
 /* HOME */
-@media (max-width:576px) {
+@media (max-width:576) {
     .backhome {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 18px;
@@ -17,10 +17,11 @@
         height: 250px;
     }
 
+
 }
 
 /* botones del home*/
-@media (max-width:576px) {
+@media (max-width:576) {
     .gris {
         display: inline;
         margin: 5px;
