--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -1,16 +1,16 @@
 /* HEADER*/
 
-@media (max-width:576) {
+@media (max-width:576px) {
     header img {
-        width: 80%;
+        width: 70%;
     }
 }
 
 /* HOME */
-@media (max-width:576) {
+@media (max-width:576px) {
     .backhome {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 18px;
+        font-size: 15px;
         font-weight: 700;
         text-align: center;
         padding: 50px;
@@ -21,9 +21,9 @@
 }
 
 /* botones del home*/
-@media (max-width:576) {
+@media (max-width:576px) {
     .gris {
-        display: inline;
+        display: flex;
         margin: 5px;
         background-color: #cdcdcd00;
     }
@@ -31,7 +31,7 @@
 
 @media(max-width:576px) {
     .homeservicios {
-        display: inline;
+        display: flex;
         margin: 5px;
     }
 }
