--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -1,12 +1,13 @@
-/* HEADER*/
+/*--------------- HEADER ----------------*/
 
-@media (max-width:576px) {
+@media (max-width:500px) {
     header img {
-        width: 70%;
+        width: 80%;
     }
 }
 
-/* HOME */
+/* --------------- HOME ----------------*/
+
 @media (max-width:576px) {
     .backhome {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -39,11 +40,18 @@
 
 /*HOME SERVICIOS*/
 
-@media (max-width:576px) {
+/*@media (max-width:576px) {
     .homeservicios {
         margin: 5px;
         display: block !important;
 
+    }
+}*/
+
+@media(max-width:500px) {
+    .homeservicios {
+        display: inline;
+        margin: 5px;
     }
 }
 
@@ -74,7 +82,8 @@
 
 /*NOSOTROS*/
 
-@media (max-width:576px) {
+
+@media (max-width:500px) {
     .backnous {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 18px;
@@ -83,7 +92,7 @@
         padding: 50px;
         height: 250px;
     }
-}
+
 
 @media (max-width:576px) {
     .nosotros img {
