--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -40,7 +40,8 @@
 
 /*HOME SERVICIOS*/
 
-/*@media (max-width:576px) {
+/*
+@media (max-width:500px) {
     .homeservicios {
         margin: 5px;
         display: block !important;
@@ -156,5 +157,4 @@
     }
 }
 
-
-
+}
