revisión y depuración de mediaquerys

--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -23,32 +23,32 @@
 
 /* botones del home*/
 
-/*@media (max-width:576px) {
+@media (max-width:576px) {
     .gris {
         display: flex;
         margin: 5px;
         background-color: #cdcdcd00;
     }
-}*/
+}
 
 @media(max-width:576px) {
     .homeservicios {
-        /*display: flex;*/
-        display: inline;
+        display: flex;
+
         margin: 5px;
     }
 }
 
 /*HOME SERVICIOS*/
 
-/*
+
 @media (max-width:500px) {
     .homeservicios {
         margin: 5px;
         display: block !important;
 
     }
-}*/
+}
 
 @media(max-width:500px) {
     .homeservicios {
@@ -59,7 +59,7 @@
 
 /* GALERIA DEL HOME*/
 
-/*
+
 @media (max-width:500px) {
     .grid-container {
         width: 100%;
@@ -79,31 +79,7 @@
         width: 100%;
     }
 
-} */
-
-@media (max-width:500px) {
-    .grid-container {
-        width: 100%;
-        margin: 0px;
-        grid-template-columns: auto;
-        object-fit: cover;
-        grid-template-areas:
-            "basic-page" "Informativa" "Estandar"
-            "Portal" "Portafolio" "Corporativa"
-
-
-    }
-}
-
-@media (max-width:500px) {
-    .grid-container img {
-        width: 100%;
-    }
-
-}
-
-
-
+} 
 
 
 /*NOSOTROS*/
