--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -55,6 +55,7 @@ body .tsecciones {
   padding: 25px;
   margin: 25px;
 }
+
 body .homeservicios {
   padding: 20px;
   margin: 20px;
@@ -62,6 +63,7 @@ body .homeservicios {
   justify-content: space-between;
   align-items: center;
 }
+
 body .primary-button {
   color: #fff;
   background-color: #1AAE9F;
@@ -72,6 +74,7 @@ body .primary-button {
   display: flex;
   margin-right: 5px;
 }
+
 body .secondary-button {
   color: #1AAE9F;
   background-color: #ffffff;
@@ -80,6 +83,7 @@ body .secondary-button {
   padding: 8px;
   border-color: #ffffff;
 }
+
 body .gris {
   background-color: #e9e9e9;
   padding: 30px;
@@ -87,26 +91,33 @@ body .gris {
   justify-content: space-around;
   align-items: center;
 }
+
 body .gris-content {
   padding-left: 20px;
 }
+
 body .gris-content h3 {
   padding-bottom: 10px;
 }
+
 body .gris-content h2 {
   padding-bottom: 15px;
 }
+
 body .gris-content p {
   padding-bottom: 20px;
 }
+
 body .buttons-content {
   display: flex;
 }
+
 body .title-galeria {
   text-align: center;
   padding: 20px;
   background-color: #1AAE9F;
 }
+
 body .grid-container {
   width: 80%;
   margin: auto;
@@ -122,8 +133,9 @@ body .grid-container {
   grid-template-areas: "basic-page Informativa Estandar" "Portal Portafolio Corporativa";
   background-color: #fff;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
+
 body .basic-page {
   grid-area: basic-page;
   background-color: #fff;
@@ -134,6 +146,7 @@ body .basic-page {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 body .Informativa {
   grid-area: Informativa;
   background-color: #fff;
@@ -143,6 +156,7 @@ body .Informativa {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 body .Portal {
   grid-area: Portal;
   background-color: #fff;
@@ -152,6 +166,7 @@ body .Portal {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 body .Estandar {
   grid-area: Estandar;
   background-color: #ffffff;
@@ -161,6 +176,7 @@ body .Estandar {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 body .Portafolio {
   grid-area: Portafolio;
   background-color: #fff;
@@ -170,6 +186,7 @@ body .Portafolio {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 body .Corporativa {
   grid-area: Corporativa;
   background-color: #fff;
@@ -179,33 +196,40 @@ body .Corporativa {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 body .nosotros {
   margin: auto;
   padding: 30px;
 }
+
 body .nosotros-text {
   margin: 30px;
 }
+
 body .section div .gris-content {
   display: inline;
 }
+
 body .final {
   display: flex;
   justify-content: center;
   padding: 50px;
   background-color: #ebebeb;
 }
+
 body .form {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   padding: 10px;
   margin: 20px;
 }
+
 body .contacto {
   display: flex;
   justify-content: space-around;
   padding-left: 50px;
   padding-top: 30px;
 }
+
 body .faq {
   padding: 50px;
   margin: 50px;
@@ -223,14 +247,15 @@ header {
 }
 
 main .backhome {
-  background: rgb(184,2,174);
-  background: radial-gradient(circle, rgba(184,2,174,1) 0%, rgba(0,0,0,1) 95%);
+  background: rgb(184, 2, 174);
+  background: radial-gradient(circle, rgba(184, 2, 174, 1) 0%, rgba(0, 0, 0, 1) 95%);
   color: #fff;
   text-align: center;
   height: 430px;
   align-content: center;
   padding: 150px;
 }
+
 main .backnous {
   background-color: #1AAE9F;
   color: #fff;
@@ -239,6 +264,7 @@ main .backnous {
   align-content: center;
   padding: 150px;
 }
+
 main .backserv {
   background-color: #1AAE9F;
   color: #fff;
@@ -254,21 +280,26 @@ footer footer {
   padding: 20px;
   color: #FFF;
 }
+
 footer footer {
   background-color: #000;
 }
+
 footer .footer-section {
   display: flex;
   justify-content: space-between;
 }
+
 footer .footer-left {
   display: flex;
   align-items: center;
 }
+
 footer .footer-right {
   display: flex;
   align-items: center;
 }
+
 footer .fb-icon {
   padding: 5px;
 }
@@ -279,6 +310,7 @@ footer .fb-icon {
     width: 80%;
   }
 }
+
 /* HOME */
 @media (max-width: 576px) {
   .backhome {
@@ -290,99 +322,9 @@ footer .fb-icon {
     height: 250px;
   }
 }
-/* botones del home*/
-@media (max-width: 576px) {
-  .gris {
-    display: inline;
-    margin: 5px;
-    background-color: rgba(205, 205, 205, 0);
-  }
-}
-@media (max-width: 576px) {
-  .homeservicios {
-    display: inline;
-    margin: 5px;
-  }
-}
-/*HOME SERVICIOS*/
-@media (max-width: 576px) {
-  .homeservicios {
-    margin: 5px;
-    display: block !important;
-  }
-}
-/* GALERIA DEL HOME*/
-@media (max-width: 576px) {
-  .grid-container {
-    width: 100%;
-    margin: 0px;
-    grid-template-columns: auto;
-    -o-object-fit: cover;
-       object-fit: cover;
-    grid-template-areas: "basic-page" "Informativa" "Estandar" "Portal" "Portafolio" "Corporativa";
-  }
-}
-@media (max-width: 576px) {
-  .grid-container img {
-    width: 100%;
-  }
-}
-/*NOSOTROS*/
-@media (max-width: 576px) {
-  .backnous {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-    padding: 50px;
-    height: 250px;
-  }
-}
-@media (max-width: 576px) {
-  .nosotros img {
-    width: 70%;
-  }
-}
-/*SERVICIOS*/
-@media (max-width: 576px) {
-  .backserv {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-    padding: 50px;
-    height: 250px;
-  }
-}
-@media (max-width: 576px) {
-  .gris img {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-}
-/* CONTACTO*/
-@media (max-width: 576px) {
-  .contacto {
-    padding: 20px;
-    margin: 20px;
-    flex-wrap: wrap;
-  }
-}
-@media (max-width: 576px) {
-  .map {
-    width: 200px;
-  }
-}
-/*FAQ*/
-@media (max-width: 500px) {
-  .faq {
-    padding: 10px;
-    margin: 10px;
-  }
-}
-/* FOOTER */
-@media (max-width: 500px) {
-  .footer-section {
-    display: block;
-  }
-}/*# sourceMappingURL=estilos.css.map */
+
+/* aqui iba el media*/
+
+
+
+/*# sourceMappingURL=estilos.css.map */
