--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -9,14 +9,17 @@ header {
     }
 
     @media (max-width:576px) {
-        .backhome {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 15px;
-            font-weight: 700;
-            text-align: center;
-            padding: 50px;
-            height: 250px;
+        main {
+            .backhome {
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-size: 15px;
+                font-weight: 700;
+                text-align: center;
+                padding: 50px;
+                height: 250px;
+            }
         }
+
 
 
     }
