--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -1,10 +1,10 @@
 /*--------------- HEADER ----------------*/
 
 @media (max-width:576px) {
-        header img {
-            width: 80%;
-        }
+    header img {
+        width: 80%;
     }
+}
 
 
 
@@ -53,12 +53,16 @@
 
 /* botones del home*/
 
+
 @media (max-width:576px) {
-    .gris {
-        display: flex;
-        margin: 5px;
-        background-color: #cdcdcd00;
+    body{
+        .gris {
+            display: flex;
+            margin: 5px;
+            background-color: #cdcdcd00;
+        }
     }
+    
 }
 
 @media(max-width:576px) {
