--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,59 +1,69 @@
 /* Estilos para todo */
 h1 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 30px;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 h2 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 25px;
-  font-weight: 600; }
+  font-weight: 600;
+}
 
 h3 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20x;
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 h4 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 18px;
-  font-weight: 400; }
+  font-weight: 400;
+}
 
 p {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 16px; }
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 16px;
+}
 
 /*-----RESET---AFECTA A TODO EL PROYECTO--siempre va margin y padding 0 en CSS----*/
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /*----Boostrap NAV-----*/
 .nav-link {
   color: #f8f9fa !important;
-  background-color: #222 !important; }
+  background-color: #222 !important;
+}
 
 .bg-body-tertiary {
   --bs-bg-opacity: 1;
-  background-color: #222 !important; }
+  background-color: #222 !important;
+}
 
 button.navbar-toggler {
-  background-color: #fff; }
+  background-color: #fff;
+}
 
 /*-----------BODY-------------*/
 body .tsecciones {
   padding: 25px;
-  margin: 25px; }
-
+  margin: 25px;
+}
 body .homeservicios {
   padding: 20px;
   margin: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
-
+  align-items: center;
+}
 body .primary-button {
+  text-decoration: none;
   color: #fff;
   background-color: #1AAE9F;
   border-radius: 5px;
@@ -61,59 +71,60 @@ body .primary-button {
   padding: 8px;
   border-color: #1AAE9F;
   display: flex;
-  margin-right: 5px; }
-
+  margin-right: 5px;
+}
 body .secondary-button {
   color: #1AAE9F;
   background-color: #ffffff;
   border-radius: 5px;
   font-size: 15px;
   padding: 8px;
-  border-color: #ffffff; }
-
+  border-color: #ffffff;
+}
 body .gris {
   background-color: #e9e9e9;
   padding: 30px;
   display: flex;
   justify-content: space-around;
-  align-items: center; }
-
+  align-items: center;
+}
 body .gris-content {
-  padding-left: 20px; }
-
+  padding-left: 20px;
+}
 body .gris-content h3 {
-  padding-bottom: 10px; }
-
+  padding-bottom: 10px;
+}
 body .gris-content h2 {
-  padding-bottom: 15px; }
-
+  padding-bottom: 15px;
+}
 body .gris-content p {
-  padding-bottom: 20px; }
-
+  padding-bottom: 20px;
+}
 body .buttons-content {
-  display: flex; }
-
+  display: flex;
+}
 body .title-galeria {
   text-align: center;
   padding: 20px;
-  background-color: #1AAE9F; }
-
+  background-color: #1AAE9F;
+}
 body .grid-container {
   width: 80%;
   margin: auto;
   padding: 20px;
   color: #000;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto;
   gap: 5px 5px;
   grid-auto-flow: row;
   justify-content: center;
-  grid-template-areas: "basic-page Informativa Estandar" "Portal Portafolio Corporativa";
+  grid-template-areas: "basic-page Informativa Estandar" "Portal Portafolio Corporativa";
   background-color: #fff;
-  object-fit: cover; }
-
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 body .basic-page {
   grid-area: basic-page;
   background-color: #fff;
@@ -122,8 +133,8 @@ body .basic-page {
   padding: 10px;
   font-weight: 600;
   font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 body .Informativa {
   grid-area: Informativa;
   background-color: #fff;
@@ -131,8 +142,8 @@ body .Informativa {
   padding: 10px;
   font-weight: 600;
   font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 body .Portal {
   grid-area: Portal;
   background-color: #fff;
@@ -140,8 +151,8 @@ body .Portal {
   padding: 10px;
   font-weight: 600;
   font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 body .Estandar {
   grid-area: Estandar;
   background-color: #ffffff;
@@ -149,8 +160,8 @@ body .Estandar {
   padding: 10px;
   font-weight: 600;
   font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 body .Portafolio {
   grid-area: Portafolio;
   background-color: #fff;
@@ -158,8 +169,8 @@ body .Portafolio {
   padding: 10px;
   font-weight: 600;
   font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 body .Corporativa {
   grid-area: Corporativa;
   background-color: #fff;
@@ -167,38 +178,39 @@ body .Corporativa {
   padding: 10px;
   font-weight: 600;
   font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 body .nosotros {
   margin: auto;
-  padding: 30px; }
-
+  padding: 30px;
+}
 body .nosotros-text {
-  margin: 30px; }
-
+  margin: 30px;
+}
 body .section div .gris-content {
-  display: inline; }
-
+  display: inline;
+}
 body .final {
   display: flex;
   justify-content: center;
   padding: 50px;
-  background-color: #ebebeb; }
-
+  background-color: #ebebeb;
+}
 body .form {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   padding: 10px;
-  margin: 20px; }
-
+  margin: 20px;
+}
 body .contacto {
   display: flex;
   justify-content: space-around;
   padding-left: 50px;
-  padding-top: 30px; }
-
+  padding-top: 30px;
+}
 body .faq {
   padding: 50px;
-  margin: 50px; }
+  margin: 50px;
+}
 
 header {
   background-color: #222;
@@ -208,149 +220,206 @@ header {
   top: 0;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start; }
+  align-items: flex-start;
+}
 
 main .backhome {
-  background-color: #000d3f;
+  background: rgb(184, 2, 174);
+  background: radial-gradient(circle, rgb(184, 2, 174) 0%, rgb(0, 0, 0) 95%);
   color: #fff;
   text-align: center;
   height: 430px;
   align-content: center;
-  padding: 150px; }
-
+  padding: 150px;
+}
 main .backnous {
-  background-color: #1AAE9F;
+  background: rgb(184, 2, 174);
+  background: radial-gradient(circle, rgb(184, 2, 174) 0%, rgb(0, 0, 0) 95%);
   color: #fff;
   text-align: center;
   height: 430px;
   align-content: center;
-  padding: 150px; }
-
+  padding: 150px;
+}
 main .backserv {
-  background-color: #1AAE9F;
+  background: rgb(184, 2, 174);
+  background: radial-gradient(circle, rgb(184, 2, 174) 0%, rgb(0, 0, 0) 95%);
   color: #fff;
   text-align: center;
   height: 430px;
   align-content: center;
-  padding: 150px; }
+  padding: 150px;
+}
 
-footer footer {
+footer {
   background-color: #222;
-  color: #fff;
+  color: #f8f8f8;
   padding: 20px;
-  color: #FFF; }
+}
 
-footer footer {
-  background-color: #000; }
+footer {
+  background-color: #000;
+}
 
-footer .footer-section {
+.footer-section {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
-footer .footer-left {
+.footer-left {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
-footer .footer-right {
+.footer-right {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
-footer .fb-icon {
-  padding: 5px; }
+.fb-icon {
+  padding: 5px;
+}
 
-/* HEADER*/
+/*--------------- HEADER ----------------*/
 @media (max-width: 576px) {
   header img {
-    width: 80%; } }
-
-/* HOME */
+    width: 80%;
+  }
+}
 @media (max-width: 576px) {
-  .backhome {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
+  main .backhome {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
     font-weight: 700;
     text-align: center;
     padding: 50px;
-    height: 250px; } }
+    height: 250px;
+  }
+}
+/*
+@media (max-width:500px) {
+    header img {
+        width: 80%;
+    }
+}
 
+*/
+/* --------------- HOME ----------------*/
+/*
+@media (max-width:576px) {
+    .backhome {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 15px;
+        font-weight: 700;
+        text-align: center;
+        padding: 50px;
+        height: 250px;
+    }
+
+
+}
+
+*/
 /* botones del home*/
-@media (max-width: 576px) {
-  .gris {
-    display: inline;
+@media (max-width: 500px) {
+  body .gris {
+    display: flex;
     margin: 5px;
-    background-color: #cdcdcd00; } }
+    background-color: rgba(205, 205, 205, 0);
+  }
+}
 
 @media (max-width: 576px) {
   .homeservicios {
-    display: inline;
-    margin: 5px; } }
-
+    display: flex;
+    margin: 5px;
+  }
+}
 /*HOME SERVICIOS*/
-@media (max-width: 576px) {
+@media (max-width: 500px) {
   .homeservicios {
     margin: 5px;
-    display: block !important; } }
-
+    display: block !important;
+  }
+}
+@media (max-width: 500px) {
+  .homeservicios {
+    display: inline;
+    margin: 5px;
+  }
+}
 /* GALERIA DEL HOME*/
-@media (max-width: 576px) {
+@media (max-width: 500px) {
   .grid-container {
     width: 100%;
     margin: 0px;
     grid-template-columns: auto;
-    object-fit: cover;
-    grid-template-areas: "basic-page" "Informativa" "Estandar" "Portal" "Portafolio" "Corporativa"; } }
-
+    -o-object-fit: cover;
+       object-fit: cover;
+    grid-template-areas: "basic-page" "Informativa" "Estandar" "Portal" "Portafolio" "Corporativa";
+  }
+}
 @media (max-width: 576px) {
   .grid-container img {
-    width: 100%; } }
-
+    width: 100%;
+  }
+}
 /*NOSOTROS*/
-@media (max-width: 576px) {
+@media (max-width: 500px) {
   .backnous {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
     padding: 50px;
-    height: 250px; } }
-
-@media (max-width: 576px) {
+    height: 250px;
+  }
+  /*SERVICIOS*/
+  /* CONTACTO*/
+  /*FAQ*/
+  /* FOOTER */
+}
+@media (max-width: 500px) and (max-width: 576px) {
   .nosotros img {
-    width: 70%; } }
-
-/*SERVICIOS*/
-@media (max-width: 576px) {
+    width: 70%;
+  }
+}
+@media (max-width: 500px) and (max-width: 576px) {
   .backserv {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
     padding: 50px;
-    height: 250px; } }
-
-@media (max-width: 576px) {
+    height: 250px;
+  }
+}
+@media (max-width: 500px) and (max-width: 576px) {
   .gris img {
     padding-top: 20px;
-    padding-bottom: 20px; } }
-
-/* CONTACTO*/
-@media (max-width: 576px) {
+    padding-bottom: 20px;
+  }
+}
+@media (max-width: 500px) and (max-width: 576px) {
   .contacto {
     padding: 20px;
     margin: 20px;
-    flex-wrap: wrap; } }
-
-@media (max-width: 576px) {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 500px) and (max-width: 576px) {
   .map {
-    width: 200px; } }
-
-/*FAQ*/
-@media (max-width: 500px) {
+    width: 200px;
+  }
+}
+@media (max-width: 500px) and (max-width: 500px) {
   .faq {
     padding: 10px;
-    margin: 10px; } }
-
-/* FOOTER */
-@media (max-width: 500px) {
+    margin: 10px;
+  }
+}
+@media (max-width: 500px) and (max-width: 500px) {
   .footer-section {
-    display: block; } }
+    display: block;
+  }
+}/*# sourceMappingURL=estilos.css.map */
