--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -31,40 +31,34 @@
             flex-direction: column;
             margin: 5px;
         }
+
+        .homeservicios {
+            display: block;
+            margin: 5px;
+        }
+
+        .grid-container {
+            width: 100%;
+            margin: 0px;
+            grid-template-columns: auto;
+            object-fit: cover;
+            grid-template-areas:
+                "basic-page" "Informativa" "Estandar"
+                "Portal" "Portafolio" "Corporativa";
+            img {
+                width: 100%;
+            }
+
+        }
     }
+
 }
 
-
-@media(max-width:576px) {
-    .homeservicios {
-        display: flex;
-
-        margin: 5px;
-    }
-}
-
-/*HOME SERVICIOS*/
-
-
-@media (max-width:500px) {
-    .homeservicios {
-        margin: 5px;
-        display: block !important;
-
-    }
-}
-
-@media(max-width:500px) {
-    .homeservicios {
-        display: inline;
-        margin: 5px;
-    }
-}
 
 /* GALERIA DEL HOME*/
 
 
-@media (max-width:500px) {
+/*@media (max-width:500px) {
     .grid-container {
         width: 100%;
         margin: 0px;
@@ -76,7 +70,7 @@
 
 
     }
-}
+}*/
 
 @media (max-width:576px) {
     .grid-container img {
