--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -76,6 +76,16 @@
             padding: 50px;
             height: 250px;
         }
+
+        .backserv {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 18px;
+            font-weight: 700;
+            text-align: center;
+            padding: 50px;
+            height: 250px;
+        }
+
     }
 
 }
@@ -90,6 +100,8 @@
 
 /*SERVICIOS*/
 
+
+/*
 @media (max-width:576px) {
     .backserv {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -100,7 +112,7 @@
         height: 250px;
     }
 
-}
+}*/
 
 @media (max-width:576px) {
     .gris img {
