--- a/css/estilos.css
+++ b/css/estilos.css
@@ -319,28 +319,14 @@ footer {
     width: 100%;
   }
 }
-/* GALERIA DEL HOME*/
-/*@media (max-width:500px) {
-    .grid-container {
-        width: 100%;
-        margin: 0px;
-        grid-template-columns: auto;
-        object-fit: cover;
-        grid-template-areas:
-            "basic-page" "Informativa" "Estandar"
-            "Portal" "Portafolio" "Corporativa"
-
-
-    }
-}*/
 @media (max-width: 576px) {
   .grid-container img {
     width: 100%;
   }
 }
 /*NOSOTROS*/
-@media (max-width: 500px) {
-  .backnous {
+@media (max-width: 576px) {
+  main .backnous {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -348,51 +334,61 @@ footer {
     padding: 50px;
     height: 250px;
   }
-  /*SERVICIOS*/
-  /* CONTACTO*/
-  /*FAQ*/
-  /* FOOTER */
+  main .backserv {
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    padding: 50px;
+    height: 250px;
+  }
 }
-@media (max-width: 500px) and (max-width: 576px) {
-  .nosotros img {
+@media (max-width: 576px) {
+  body .nosotros img {
     width: 70%;
   }
 }
-@media (max-width: 500px) and (max-width: 576px) {
-  .backserv {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-    padding: 50px;
-    height: 250px;
-  }
-}
-@media (max-width: 500px) and (max-width: 576px) {
+/*SERVICIOS*/
+/*
+@media (max-width:576px) {
+    .backserv {
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        text-align: center;
+        padding: 50px;
+        height: 250px;
+    }
+
+}*/
+@media (max-width: 576px) {
   .gris img {
     padding-top: 20px;
     padding-bottom: 20px;
   }
 }
-@media (max-width: 500px) and (max-width: 576px) {
+/* CONTACTO*/
+@media (max-width: 576px) {
   .contacto {
     padding: 20px;
     margin: 20px;
     flex-wrap: wrap;
   }
 }
-@media (max-width: 500px) and (max-width: 576px) {
+@media (max-width: 576px) {
   .map {
     width: 200px;
   }
 }
-@media (max-width: 500px) and (max-width: 500px) {
-  .faq {
+/*FAQ*/
+@media (max-width: 500px) {
+  body .faq {
     padding: 10px;
     margin: 10px;
   }
 }
-@media (max-width: 500px) and (max-width: 500px) {
+/* FOOTER */
+@media (max-width: 500px) {
   .footer-section {
     display: block;
   }
