--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -98,29 +98,15 @@
     }
 }
 
-/*SERVICIOS*/
 
-
-/*
-@media (max-width:576px) {
-    .backserv {
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        text-align: center;
-        padding: 50px;
-        height: 250px;
+@media (max-width:576px){
+    body{
+        .gris img {
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
     }
-
-}*/
-
-@media (max-width:576px) {
-    .gris img {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-}
+} 
 
 /* CONTACTO*/
 
@@ -134,10 +120,16 @@
 
 
 @media (max-width:576px) {
+    body {
     .map {
         width: 200px;
     }
 }
+}
+
+
+
+
 
 /*FAQ*/
 
