--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -11,8 +11,8 @@ main {
     }
 
     .backnous {
-        background: rgb(184, 2, 174);
-        background: radial-gradient(circle, rgba(184, 2, 174, 1) 0%, rgba(0, 0, 0, 1) 95%);
+        background: #021db8;    
+        background: radial-gradient(circle, #021db8 0%, rgba(0, 0, 0, 1) 95%);
         color: #fff;
         text-align: center;
         height: 430px;
@@ -22,8 +22,8 @@ main {
     }
 
     .backserv {
-        background: rgb(184, 2, 174);
-        background: radial-gradient(circle, rgba(184, 2, 174, 1) 0%, rgba(0, 0, 0, 1) 95%);
+        background: #048a3f;
+        background: radial-gradient(circle, #048a3f 0%, rgba(0, 0, 0, 1) 95%);
         color: #fff;
         text-align: center;
         height: 430px;
