--- a/css/estilos.css
+++ b/css/estilos.css
@@ -233,8 +233,8 @@ main .backhome {
   padding: 150px;
 }
 main .backnous {
-  background: rgb(184, 2, 174);
-  background: radial-gradient(circle, rgb(184, 2, 174) 0%, rgb(0, 0, 0) 95%);
+  background: #021db8;
+  background: radial-gradient(circle, #021db8 0%, rgb(0, 0, 0) 95%);
   color: #fff;
   text-align: center;
   height: 430px;
@@ -242,8 +242,8 @@ main .backnous {
   padding: 150px;
 }
 main .backserv {
-  background: rgb(184, 2, 174);
-  background: radial-gradient(circle, rgb(184, 2, 174) 0%, rgb(0, 0, 0) 95%);
+  background: #048a3f;
+  background: radial-gradient(circle, #048a3f 0%, rgb(0, 0, 0) 95%);
   color: #fff;
   text-align: center;
   height: 430px;
