map display none

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -364,8 +364,7 @@ footer {
 }
 @media (max-width: 576px) {
   body .map {
-    width: 200px;
-    height: 450px;
+    display: none;
   }
 }
 /*FAQ*/
