--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -122,8 +122,8 @@
 @media (max-width:576px) {
     body {
     .map {
-        width: 200px;
-        height:450px;
+        display: none;
+
     }
 }
 }
