--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -83,6 +83,10 @@ body{
         margin-right: 5px;
     
     }
+
+    .primary-button:hover {
+        transform: scale(1.2);
+      }
     
     .secondary-button {
         color: #1AAE9F;
