--- a/css/estilos.css
+++ b/css/estilos.css
@@ -84,6 +84,9 @@ body .secondary-button {
   padding: 8px;
   border-color: #ffffff;
 }
+body .secondary-button:hover {
+  transform: scale(1.2);
+}
 body .gris {
   background-color: #e9e9e9;
   padding: 30px;
