--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -97,6 +97,10 @@ body {
         border-color: #ffffff;
     }
 
+    .secondary-button:hover {
+        transform: scale(1.2);
+    }
+
     .gris {
         background-color: #e9e9e9;
         padding: 30px;
