--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -229,6 +229,12 @@ body {
         padding: 30px;
     }
 
+    .nosotrps{
+        img:hover {
+            transform: scale(1.2);
+        }
+    }
+
 
     .nosotros-text {
         margin: 30px;
