--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -229,7 +229,7 @@ body {
         padding: 30px;
     }
 
-    .nosotrps{
+    .nosotros{
         img:hover {
             transform: scale(1.2);
         }
