--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -229,11 +229,10 @@ body {
         padding: 30px;
     }
 
-    .nosotros{
-        img:hover {
+    .nosotros img:hover{ 
             transform: scale(1.2);
         }
-    }
+    
 
 
     .nosotros-text {
