hover segundos nosotros

--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -229,8 +229,9 @@ body {
         padding: 30px;
     }
 
-    .nosotros img:hover{ 
-            transform: scale(1.2);
+    .nosotros img{ 
+        transition: transform 0.2s ease;
+        &:hover{transform: scale(1.2);}
         }
     
 
