--- a/css/estilos.css
+++ b/css/estilos.css
@@ -97,27 +97,34 @@ body .gris {
 body .gris img:hover {
   transform: scale(1.2);
 }
-body .gris-content {
+
+.gris-content {
   padding-left: 20px;
 }
-body .gris-content h3 {
+
+.gris-content h3 {
   padding-bottom: 10px;
 }
-body .gris-content h2 {
+
+.gris-content h2 {
   padding-bottom: 15px;
 }
-body .gris-content p {
+
+.gris-content p {
   padding-bottom: 20px;
 }
-body .buttons-content {
+
+.buttons-content {
   display: flex;
 }
-body .title-galeria {
+
+.title-galeria {
   text-align: center;
   padding: 20px;
   background-color: #1AAE9F;
 }
-body .grid-container {
+
+.grid-container {
   width: 80%;
   margin: auto;
   padding: 20px;
@@ -134,7 +141,8 @@ body .grid-container {
   -o-object-fit: cover;
      object-fit: cover;
 }
-body .basic-page {
+
+.basic-page {
   grid-area: basic-page;
   background-color: #fff;
   color: #000;
@@ -144,7 +152,8 @@ body .basic-page {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-body .Informativa {
+
+.Informativa {
   grid-area: Informativa;
   background-color: #fff;
   text-align: center;
@@ -153,7 +162,8 @@ body .Informativa {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-body .Portal {
+
+.Portal {
   grid-area: Portal;
   background-color: #fff;
   text-align: center;
@@ -162,7 +172,8 @@ body .Portal {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-body .Estandar {
+
+.Estandar {
   grid-area: Estandar;
   background-color: #ffffff;
   text-align: center;
@@ -171,7 +182,8 @@ body .Estandar {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-body .Portafolio {
+
+.Portafolio {
   grid-area: Portafolio;
   background-color: #fff;
   text-align: center;
@@ -180,7 +192,8 @@ body .Portafolio {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-body .Corporativa {
+
+.Corporativa {
   grid-area: Corporativa;
   background-color: #fff;
   text-align: center;
@@ -189,34 +202,48 @@ body .Corporativa {
   font-size: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-body .nosotros {
+
+.nosotros {
   margin: auto;
   padding: 30px;
 }
-body .nosotros-text {
+
+.nosotros img {
+  transition: transform 0.2s ease;
+}
+.nosotros img:hover {
+  transform: scale(1.2);
+}
+
+.nosotros-text {
   margin: 30px;
 }
-body .section div .gris-content {
+
+.section div .gris-content {
   display: inline;
 }
-body .final {
+
+.final {
   display: flex;
   justify-content: center;
   padding: 50px;
   background-color: #ebebeb;
 }
-body .form {
+
+.form {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   padding: 10px;
   margin: 20px;
 }
-body .contacto {
+
+.contacto {
   display: flex;
   justify-content: space-around;
   padding-left: 50px;
   padding-top: 30px;
 }
-body .faq {
+
+.faq {
   padding: 50px;
   margin: 50px;
 }
