--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -111,9 +111,7 @@ body {
 
     .gris img {
         transition: transform 0.2s ease;
-
-        &:hover {
-            transform: scale(1.2);
+        &:hover { transform: scale(1.2);
         }
     }
 
