--- a/css/estilos.css
+++ b/css/estilos.css
@@ -324,6 +324,7 @@ footer {
   body .homeservicios {
     display: block;
     margin: 5px;
+    padding: 10px;
   }
   body .grid-container {
     width: 100%;
