--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -35,6 +35,7 @@
         .homeservicios {
             display: block;
             margin: 5px;
+            padding: 10px;
         }
 
         .grid-container {
