padding botom contacto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -224,6 +224,7 @@ body .contacto {
   justify-content: space-around;
   padding-left: 50px;
   padding-top: 30px;
+  padding-bottom: 30px;
 }
 body .faq {
   padding: 50px;
