--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -264,6 +264,7 @@ body {
         justify-content: space-around;
         padding-left: 50px;
         padding-top: 30px;
+        padding-bottom: 30px;
     }
 
     .faq {
