--- a/css/estilos.css
+++ b/css/estilos.css
@@ -384,7 +384,9 @@ footer {
 }
 @media (max-width: 575px) {
   body .map {
-    display: none;
+    flex-direction: column;
+    padding-top: 30px;
+    width: 200px;
   }
 }
 @media (max-width: 575px) and (max-width: 575px) {
