--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -123,7 +123,10 @@
 @media (max-width:575px) {
     body {
         .map {
-            display: none;
+            flex-direction: column;
+            padding-top: 30px;
+            width: 200px;
+
 
         }
     }
