--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -261,7 +261,7 @@ body {
 
     .contacto {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         padding-left: 50px;
         padding-top: 30px;
         padding-bottom: 30px;
