--- a/css/estilos.css
+++ b/css/estilos.css
@@ -221,7 +221,7 @@ body .form {
 }
 body .contacto {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding-left: 50px;
   padding-top: 30px;
   padding-bottom: 30px;
