--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -111,7 +111,9 @@ body {
 
     .gris img {
         transition: transform 0.2s ease;
-        &:hover { transform: scale(1.2);
+
+        &:hover {
+            transform: scale(1.2);
         }
     }
 
@@ -261,7 +263,7 @@ body {
 
     .contacto {
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
         padding-left: 50px;
         padding-top: 30px;
         padding-bottom: 30px;
