--- a/css/estilos.css
+++ b/css/estilos.css
@@ -221,10 +221,9 @@ body .form {
 }
 body .contacto {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-around;
   padding-left: 50px;
   padding-top: 30px;
-  padding-bottom: 30px;
 }
 body .faq {
   padding: 50px;
