--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -263,10 +263,9 @@ body {
 
     .contacto {
         display: flex;
-        flex-wrap: wrap;
+        justify-content:space-around; 
         padding-left: 50px;
         padding-top: 30px;
-        padding-bottom: 30px;
     }
 
     .faq {
